Fixed game over visibility overriding main game

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body {
   z-index: 1;
 }
 
+#game-over {
+  visibility: hidden;
+}
+
 #avatar {
   object-fit: cover;
 }
@@ -46,7 +50,6 @@ body {
 #jam {
   text-align: right;
 }
-<<<<<<< HEAD
 
 .fadeBase {
   opacity: 1;
@@ -57,5 +60,3 @@ body {
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
-=======
->>>>>>> main
